Set up swagger security to allow bearer token authentication